[2.8] Crash when 'apply pose as rest pose' when bone scale is 0,0,0 #55973

Closed
opened 2018-07-14 08:07:27 +02:00 by Maxximo Ramirez · 5 comments

System Information
Windows 10 x64
Intel i5 7600k
EVGA 970 SC 4gb.

Blender Version
Broken: Blender 2.80 6f8a141

Short description of error
when scaling to 0,0,0 a bone and then 'apply pose as rest pose' blender will crash

Exact steps for others to reproduce the error
make a 2 pieces armature
make one of the bones 0,0,0 in scale on the bone properties
select the pose and 'apply as rest pose'
crash.

**System Information** Windows 10 x64 Intel i5 7600k EVGA 970 SC 4gb. **Blender Version** Broken: Blender 2.80 6f8a141 **Short description of error** when scaling to 0,0,0 a bone and then 'apply pose as rest pose' blender will crash **Exact steps for others to reproduce the error** make a 2 pieces armature make one of the bones 0,0,0 in scale on the bone properties select the pose and 'apply as rest pose' crash.

Added subscriber: @maxximoramirez

Added subscriber: @maxximoramirez

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2018-07-17 17:09:43 +02:00

Crash confirmed, for 'some reason' when applying pose to rest removes a bone (like because it is set to zero size ;) ), update code still tries to access removed posebones…

Crash confirmed, for 'some reason' when applying pose to rest removes a bone (like because it is set to zero size ;) ), update code still tries to access removed posebones…

This issue was referenced by c205de0203

This issue was referenced by c205de020365eddbbc0f0cde0ad02dda91126807

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#55973
No description provided.